--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ function init() {
 
 <form action='#' method='post' id='add'>
 <p class='add'>
-<a href='https://github.com/recoders/flittr' title='Fork?' id='name'>µToDo</a>
+<a href='https://github.com/recoders/mtodo' title='Fork?' id='name'>µToDo</a>
 <label><input autofocus type='text' id='new' value='Что нужно делать?' maxlength='255' class="o_on" /> <a href="#" id="addtodo"><span>Enter ↵</span></a></label>
 </p>
 </form>
